--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <!-- Get BY COUNTRY -->
         <h1>SORT</h1>
-        <input v-model="countryToGetBy" placeholder="Country" type="text" />
+        <input v-model="countryToGetBy" placeholder="country" type="text" />
         <button v-on:click="getByCountry(countryToGetBy)" class="btn btn-primary">Get by country</button>
         <div v-if="singleAthlete">
             Id : {{singleAthlete.id}} - Name: {{singleAthlete.name}} - Country: {{ singleAthlete.country}} - Height: {{singleAthlete.height}}
